owlcms-docker/src/main/assembly/k8s/overlays/local-nocerts/loadbalancer.yaml
kind: Service
apiVersion: v1
metadata:
  name: owlcms
spec:
  selector:
    app: owlcms
  ports:
  - protocol: TCP
    name: http
    port: 81
    targetPort: 8080
  - protocol: TCP
    name: jmx
    port: 1097
    targetPort: 1098
  type: LoadBalancer
