owlcms-docker/src/main/assembly/k8s/overlays/local-nocerts/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: owlcms-ingress
  labels:
    app: owlcms
spec:
  rules:
    - host: o.local
      http:
        paths:
          - backend:
              serviceName: owlcms-8080
              servicePort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: publicresults-ingress
  labels:
    app: publicresults
spec:
  rules:
    - host: r.local
      http:
        paths:
          - backend:
              serviceName: publicresults-8080
              servicePort: 8080
